[project]
name = "study-qdrant"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ginza (>=5.2.0,<6.0.0)",
    "ja-ginza (>=5.2.0,<6.0.0)",
    "scikit-learn (>=1.0.0,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "qdrant-client (>=1.13.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

